Megaman game project- can jump and fall, but recursive falling function commented out to prevent disappearing glitch

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .square{
-  background-color: blue;
+  background-color: pink;
   display: inline-block;
   width: 3vw;
   height: 3vw;
@@ -11,9 +11,9 @@
 }
 
 .player{
-  background-color: yellow;
+  background-color: blue;
 }
 
 .ground{
-  background-color: tan;
+  background-color: grey;
 }
